# ragas

./: Makefile  README.md  SDG_with_LLM_CONTEXT.csv  SDG_without_LLM_CONTEXT.csv  mkdocs-pdf.yml  mkdocs.yml  pyproject.toml
.cursor/commands/: update-howto-guide.md
.cursor/rules/: docs-structure.mdc
.github/workflows/: claude-docs-apply.yml  claude-docs-check.yml  claude-docs-update.yml
docs/: INSTALL  quoted_spans_metric.md
docs/extra/: ragas-modern.css
docs/getstarted/: evals.md  quickstart.md
docs/howtos/: llm-adapters.md
docs/references/: aevaluate.md  index.md  optimizers.md  prompt.md  tokenizers.md
examples/ragas_examples/improve_rag/: evals.py  pyproject.toml  rag.py
src/ragas/: async_utils.py  cli.py  dataset_schema.py  evaluation.py  executor.py  experiment.py  tokenizers.py  utils.py
tests/docs/: test_modifying_prompts_metrics.py
tests/e2e/: test_dspy_integration.py
tests/unit/: TEST_SDG_LLM_CONTEXT.md  TEST_SDG_LLM_CONTEXT.py  test_async_evaluation.py  test_chrf_score_collections.py  test_datacompy_score_collections.py  test_domain_specific_rubrics_collections.py  test_dspy_adapter.py  test_dspy_optimizer.py  test_embeddings_caching.py  test_experiment.py  test_groq_evaluation_integration.py  test_groq_wrapper.py  test_instance_specific_rubrics_collections.py  test_llm_context.py  test_multi_modal_faithfulness_collections.py  test_multi_modal_relevance_collections.py  test_prechunked_generation.py  test_quoted_spans_collections.py  test_sql_semantic_equivalence_collections.py  test_tokenizers.py  test_tool_call_accuracy.py  (+3 more)
(+80 files in other folders)
